--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/scm
 spring.datasource.username=root
 spring.datasource.password=Admin@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#  jpa enable
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
